--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="https://www.linkedin.com/in/dhammikepremachandra" class="image main"><img src="images/into.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.linkedin.com/in/dhammikepremachandra" class="button large">Full Story</a></li>
+									<li><a href="https://www.linkedin.com/in/dhammikepremachandra" class="button large">see more</a></li>
 								</ul>
 							</article>
 
@@ -71,7 +71,7 @@
 									<a href="https://github.com/DhammikePremachandra/SQL/blob/main/Data%20Cleaning_NashvilleHousing.sql" class="image fit"><img src="images/Na1.jpeg" alt="" /></a>
 									<p>This project involves identifying and correcting errors and inconsistencies in housing data to enhance the overall data quality.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/DhammikePremachandra/SQL/blob/main/Data%20Cleaning_NashvilleHousing.sql" class="button">Project</a></li>
+										<li><a href="https://github.com/DhammikePremachandra/SQL/blob/main/Data%20Cleaning_NashvilleHousing.sql" class="button">see more</a></li>
 									</ul>
 								</article>
 								<article>
@@ -82,7 +82,7 @@
 									<a href="https://github.com/DhammikePremachandra/Python/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img src="images/mo1.jpeg" alt="" /></a>
 									<p>A movie correlation project in Python involves analysing a dataset of movies to identify patterns, trends, or relationships between different attributes.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/DhammikePremachandra/Python/blob/main/Movie%20Correlation%20Project.ipynb" class="button">Project</a></li>
+										<li><a href="https://github.com/DhammikePremachandra/Python/blob/main/Movie%20Correlation%20Project.ipynb" class="button">see more</a></li>
 									</ul>
 								</article>
 								<article>
@@ -93,7 +93,7 @@
 									<a href="https://public.tableau.com/app/profile/dhammike.premachandra/vizzes" class="image fit"><img src="images/Tableau-Emblem.png" alt="" /></a>
 									<p>Creating a Dashboard in Tableau involved collecting, processing, and visualizing data.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/dhammike.premachandra/vizzes" class="button">Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/dhammike.premachandra/vizzes" class="button">see more</a></li>
 									</ul>
 								</article>
 								<article>
@@ -104,7 +104,7 @@
 									<a href="https://github.com/DhammikePremachandra/SQL/blob/main/Corona_Virus_Deaths_Data_Exploration%20.sql" class="image fit"><img src="images/coronavirus teaser.jpeg" alt="" /></a>
 									<p>Data exploration in SQL involved querying and analyzing a dataset to gain insights into its structure, content, and distribution..</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/DhammikePremachandra/SQL/blob/main/Corona_Virus_Deaths_Data_Exploration%20.sql" class="button">Project</a></li>
+										<li><a href="https://github.com/DhammikePremachandra/SQL/blob/main/Corona_Virus_Deaths_Data_Exploration%20.sql" class="button">see more</a></li>
 									</ul>
 								</article>
 								<article>
@@ -115,7 +115,7 @@
 									<a href="https://github.com/DhammikePremachandra/Excel" class="image fit"><img src="images/excel.png" alt="" /></a>
 									<p>Analyzing data in Excel involved using various features and functions to explore, summarize, and visualize information.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/DhammikePremachandra/Excel" class="button">Project</a></li>
+										<li><a href="https://github.com/DhammikePremachandra/Excel" class="button">see more</a></li>
 									</ul>
 								</article>
 								
